# C_Calculator

./: CMakeLists.txt  appStructure.c  appStructure.h  arithmetic.c  arithmetic.h  calculatorOperations.c  calculatorOperations.h  main.c  menuHandler.c  menuHandler.h
